@@ -1,43 +1,0 @@
-package org.apache.lucene.facet.index.categorypolicy;
-
-import org.apache.lucene.facet.taxonomy.TaxonomyReader;
-import org.apache.lucene.facet.taxonomy.TaxonomyWriter;
-
-/*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-/**
- * This class filters our the ROOT category ID. For more information see
- * {@link OrdinalPolicy}.
- * 
- * @lucene.experimental
- */
-public class DefaultOrdinalPolicy implements OrdinalPolicy {
-
-  /**
-   * Filters out (returns false) ordinals equal or less than
-   * {@link TaxonomyReader#ROOT_ORDINAL}. true otherwise.
-   */
-  public boolean shouldAdd(int ordinal) {
-    return ordinal > TaxonomyReader.ROOT_ORDINAL;
-  }
-
-  /**
-   * Implemented as NO-OP as the default is not taxonomy dependent
-   */
-  public void init(TaxonomyWriter taxonomyWriter) { }
-}
