@@ -23,16 +23,24 @@ import org.apache.lucene.facet.taxonomy.CategoryPath;
  */
 
 /**
- * Filtering category paths in {@link CategoryParentsStream}, where a given
- * category is added to the stream, and than all its parents are being
- * added one after the other by successively removing the last component. <br>
- * That loop should have a stop point - the default approach (excluding the
- * ROOT) is implemented in {@link DefaultOrdinalPolicy}.
+ * Determines which {@link CategoryPath categories} should be added as terms to
+ * the {@link CategoryParentsStream}. The default approach is implemented by
+ * {@link #ALL_CATEGORIES}.
  * 
  * @lucene.experimental
  */
 public interface PathPolicy extends Serializable {
 
+  /**
+   * A {@link PathPolicy} which adds all {@link CategoryPath} that have at least
+   * one component (i.e. {@link CategoryPath#length()} &gt; 0) to the categories
+   * stream.
+   */
+  public static final PathPolicy ALL_CATEGORIES = new PathPolicy() {
+    @Override
+    public boolean shouldAdd(CategoryPath categoryPath) { return categoryPath.length() > 0; }
+  };
+  
   /**
    * Check whether a given category path should be added to the stream.
    * 
